// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create a topic 1`] = `
{
  "connections.json": {
    "connections": [],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "@winglang/sdk.std.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_topic",
        "props": {},
        "type": "@winglang/sdk.cloud.Topic",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.DynamodbTable": {
        "className": "DynamodbTable",
        "sourcePath": "<ABSOLUTE PATH>/dynamodb-table.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_topic": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A pub/sub notification topic",
            "title": "Topic",
          },
          "id": "my_topic",
          "path": "root/my_topic",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.70",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`topic publishes messages as they are received 1`] = `
[
  "@winglang/sdk.std.TestRunner created.",
  "@winglang/sdk.cloud.Function created.",
  "@winglang/sdk.cloud.Topic created.",
  "@winglang/sdk.sim.EventMapping created.",
  "Publish (message=Alpha).",
  "Sending message (message=Alpha, subscriber=sim-1).",
  "Publish (message=Beta).",
  "Sending message (message=Beta, subscriber=sim-1).",
  "Received Alpha",
  "Invoke (payload=\\"Alpha\\").",
  "Received Beta",
  "Invoke (payload=\\"Beta\\").",
  "@winglang/sdk.sim.EventMapping deleted.",
  "@winglang/sdk.cloud.Topic deleted.",
  "@winglang/sdk.cloud.Function deleted.",
  "@winglang/sdk.std.TestRunner deleted.",
]
`;

exports[`topic publishes messages to multiple subscribers 1`] = `
[
  "@winglang/sdk.std.TestRunner created.",
  "@winglang/sdk.cloud.Function created.",
  "@winglang/sdk.cloud.Topic created.",
  "@winglang/sdk.sim.EventMapping created.",
  "@winglang/sdk.cloud.Function created.",
  "@winglang/sdk.sim.EventMapping created.",
  "Publish (message=Alpha).",
  "Sending message (message=Alpha, subscriber=sim-1).",
  "Sending message (message=Alpha, subscriber=sim-4).",
  "@winglang/sdk.sim.EventMapping deleted.",
  "@winglang/sdk.cloud.Function deleted.",
  "@winglang/sdk.sim.EventMapping deleted.",
  "@winglang/sdk.cloud.Topic deleted.",
  "@winglang/sdk.cloud.Function deleted.",
  "@winglang/sdk.std.TestRunner deleted.",
]
`;
